[fix] modify API error handling